sample-services-yaml/argocd-operator/argocd.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-network-policy
  namespace: demo1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo1-argocd-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: svc-contour-domain-c8
    - podSelector:
        matchLabels:
          app: contour
# This is the port if the pod and not the service
    ports:
    - protocol: TCP
      port: 8080
